// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-base first:mr-3 last:ml-3 text-theme-secondary-700 dark:text-theme-secondary-200"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-pointer h-4"
    >
      <input
        class="toggle-input sr-only"
        type="checkbox"
      />
      <div
        class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-[30px]"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 h-4 w-4 handle-inner"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-base first:mr-3 last:ml-3"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-base first:mr-3 last:ml-3 text-theme-secondary-700 dark:text-theme-secondary-200 cursor-default"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-not-allowed h-4"
    >
      <input
        class="toggle-input sr-only"
        disabled=""
        type="checkbox"
      />
      <div
        class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-[30px]"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-100 dark:bg-theme-secondary-800 h-4 w-4"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-base first:mr-3 last:ml-3 cursor-default"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render large labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-lg first:mr-4 last:ml-4 text-theme-secondary-700 dark:text-theme-secondary-200"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-pointer h-4"
    >
      <input
        class="toggle-input sr-only"
        type="checkbox"
      />
      <div
        class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-[30px]"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 h-4 w-4 handle-inner"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-lg first:mr-4 last:ml-4"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;

exports[`Switch > should render small labels 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <button
      class="font-semibold select-none text-sm first:mr-2 last:ml-2 text-theme-secondary-700 dark:text-theme-secondary-200"
    >
      Option A
    </button>
    <label
      class="flex items-center cursor-pointer h-3"
    >
      <input
        class="toggle-input sr-only"
        type="checkbox"
      />
      <div
        class="toggle-handle relative inline-flex h-[5px] rounded-full bg-theme-primary-100 dark:bg-theme-secondary-800 w-6"
      >
        <span
          class="absolute top-1/2 -translate-y-1/2 rounded-full transition-all duration-200 ease-in-out bg-theme-primary-600 h-3 w-3 handle-inner"
        />
      </div>
    </label>
    <button
      class="font-semibold select-none text-theme-secondary-500 dark:text-theme-secondary-700 text-sm first:mr-2 last:ml-2"
    >
      Option B
    </button>
  </div>
</DocumentFragment>
`;
